--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,11 +1,11 @@
 worlds:
-  world:
+  example:
     keepSpawnInMemory: false
     preventNewChunks: true
-    preventChunkSave: true
+    preventChunkSaves: true
     keepLoaded:
       area1:
-        x1: 0
-        z1: 0
-        x2: 1
-        z2: 1
+        x1: -10
+        z1: -10
+        x2: 9
+        z2: 9
